# Pix2Text

./: .gitignore  Pix2Text.ipynb  README.md  __init__.py  config.py  pyproject.toml
data/: __init__.py  modelnet.py  utils.py
evaluation/: __init__.py  retrieval.py
inference/: __init__.py  describe.py
models/: __init__.py  mlp.py  pointnet.py  text_encoder.py
training/: __init__.py  loop.py  loss.py
viz/: __init__.py  plot.py
